cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(descriptor_test1)
find_package(PCL 1.8.1 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(descriptor_test1 descriptor_test1.cpp)
target_link_libraries(descriptor_test1 ${PCL_LIBRARIES})
